# norm-rust

./: AGENTS.md  Cargo.toml  README.md
src/: document.rs  encoder.rs  error.rs  lexer.rs  lib.rs  parser.rs
tests/: cli.rs  encode.rs  errors.rs  parse.rs  roundtrip.rs  validate.rs
tests/fixtures/errors/: array_section_as_root.norm  bom.norm  circular_reference.norm  duplicate_pk.norm  duplicate_section_name.norm  empty_array_row.norm  invalid_pk_leading_zero.norm  invalid_section_name.norm  missing_root.norm  multiple_root_rows.norm  null_byte.norm  unexpected_data_row.norm  unreachable_section.norm  unresolved_named_ref.norm  unresolved_row_ref.norm
